2008-09-15  Dean Jackson  <dino@apple.com>

        Reviewed by Tim Hatcher.

        Add default constructor for ShadowData
        https://bugs.webkit.org/show_bug.cgi?id=20757

        Test: transitions/shadow.html

        * rendering/style/RenderStyle.h:

2008-09-15  Dean Jackson  <dino@apple.com>

        Reviewed by Tim Hatcher.

        RenderStyle should update keyframes.
        http://bugs.webkit.org/show_bug.cgi?id=20756

        * rendering/style/RenderStyle.cpp:
        (WebCore::StyleRareNonInheritedData::updateKeyframes):

2008-09-15  Dean Jackson  <dino@apple.com>

        Reviewed by Tim Hatcher.

        Unnecessary ASSERT in ImplicitAnimation destructor.
        https://bugs.webkit.org/show_bug.cgi?id=20817

        * page/animation/ImplicitAnimation.cpp:
        (WebCore::ImplicitAnimation::~ImplicitAnimation):

2008-09-15  Adam Treat  <treat@kde.org>

        Reviewed by Simon.

        Fix plugin extension info. It was returning the mimetype where the
        extension was given.

        * plugins/qt/PluginPackageQt.cpp:
        (WebCore::PluginPackage::fetchInfo):

2008-09-15  Dean Jackson  <dino@apple.com>

        Reviewed by Tim Hatcher

        Coding style violation!!!! Cleanup AnimationBase.cpp

        * page/animation/AnimationBase.cpp:
        (WebCore::blendFunc):

2008-09-15  David Hyatt  <hyatt@apple.com>

        Move all hit testing code for scrollbars into the base class.  Refactor
        it to accommodate all platform-specific behaviors using virtual ScrollbarTheme
        functions.

        No platform is using this code yet.  Although it has been moved and compiles
        (even on Mac), it is not being used on any platform.

        Reviewed by Sam Weinig

        * platform/ScrollBar.cpp:
        (WebCore::Scrollbar::autoscrollPressedPart):
        (WebCore::Scrollbar::startTimerIfNeeded):
        (WebCore::Scrollbar::handleMouseMoveEvent):
        (WebCore::Scrollbar::handleMouseOutEvent):