@@ -1,3 +1,12 @@
+2008-09-15  David Smith  <catfish.man@gmail.com>
+
+        "Just do it"'d by Mark Rowe
+
+        https://bugs.webkit.org/show_bug.cgi?id=20856
+        Add missing license header
+
+        * dom/NodeRenderStyle.h:
+
 2008-09-15  Dean Jackson  <dino@apple.com>
 
         Reviewed by Tim Hatcher.
